--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <ul class="navbar">
         <img class="logocsg" src="images/logocsg.png">
-        <li class="navcontent"><a class="nav_item" href="">Contact</a></li>
-        <li class="navcontent"><a class="nav_item" href="">Vote</a></li>
+        <li class="navcontent"><a class="nav_item" href="https://www.facebook.com/cocsaigonfuhcm">Contact</a></li>
+        <li class="navcontent"><a class="nav_item" href="#">Vote</a></li>
         <li class="navcontent"><a class="nav_item" href="">Thể lệ</a></li>
-        <li class="navcontent"><a class="nav_item" href="">Tham gia</a></li>
+        <li class="navcontent"><a class="nav_item" href="https://forms.gle/H2528muDsff1yCPJ9">Tham gia</a></li>
     </ul>
     <div class="container">
         <h1>FOTOMARATHON VOTING SITE</h1>
@@ -24,30 +24,28 @@
             <div class="title">Title</div>
             <p>Team</p>
             <p>Description</p>
-            <a class="button" type="button" href="https://www.google.com.vn/" target="_blank"> VOTE</a>
+            <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
         <div class="block">
             <img src="images/photo.webp">
             <div class="title">Title</div>
             <p>Team</p>
             <p>Description</p>
-            <a class="button" type="button" href="https://www.google.com.vn/" target="_blank"> VOTE</a>
+            <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
         <div class="block">
             <img src="images/photo.webp">
             <div class="title">Title</div>
             <p>Team</p>
             <p>Description</p>
-            <!-- <button formtarget="_blank" onclick="window.location.href='https://www.google.com.vn/'" >VOTE</button> -->
-            <a class="button" type="button" href="https://www.google.com.vn/" target="_blank"> VOTE</a>
+            <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
         <div class="block">
             <img src="images/photo.webp">
             <div class="title">Title</div>
             <p>Team</p>
             <p>Description</p>
-            <!-- <button formtarget="_blank" onclick="window.location.href='https://www.google.com.vn/'" >VOTE</button> -->
-            <a class="button" type="button" href="https://www.google.com.vn/" target="_blank"> VOTE</a>
+            <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
     </div>
 </body>
