--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <ul class="navbar">
         <img class="logocsg" src="images/logocsg.png">
-        <li class="navcontent"><a class="nav_item" href="https://www.facebook.com/cocsaigonfuhcm">Contact</a></li>
+        <li class="navcontent"><a class="nav_item" href="https://www.facebook.com/cocsaigonfuhcm" target="_blank">Contact</a></li>
         <li class="navcontent"><a class="nav_item" href="#">Vote</a></li>
-        <li class="navcontent"><a class="nav_item" href="">Thể lệ</a></li>
-        <li class="navcontent"><a class="nav_item" href="https://forms.gle/H2528muDsff1yCPJ9">Tham gia</a></li>
+        <li class="navcontent"><a class="nav_item" href="" target="_blank">Thể lệ</a></li>
+        <li class="navcontent"><a class="nav_item" href="https://forms.gle/H2528muDsff1yCPJ9" target="_blank">Tham gia</a></li>
     </ul>
     <div class="container">
         <h1>FOTOMARATHON VOTING SITE</h1>
