--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="container">
         <h1>FOTOMARATHON VOTING SITE</h1>
         <p>abcdefg</p>
+        <center>
         <div class="block">
             <img src="images/photo.webp">
             <div class="title">Title</div>
@@ -47,6 +48,10 @@
             <p>Description</p>
             <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
+        </center>
     </div>
+    
+
+    
 </body>
 </html>
