--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Fotomarathon 2</title>
 </head>
 <body>
+    <!-- navbar -->
     <ul class="navbar">
         <img class="logocsg" src="images/logocsg.png">
         <li class="navcontent"><a class="nav_item" href="https://www.facebook.com/cocsaigonfuhcm" target="_blank">Contact</a> </li>
@@ -16,6 +17,8 @@
         <li class="navcontent"><a class="nav_item" href="" target="_blank">Thể lệ</a> </li>
         <li class="navcontent"><a class="nav_item" href="https://forms.gle/H2528muDsff1yCPJ9" target="_blank">Tham gia</a> </li>
     </ul>
+
+    <!-- voting section  -->
     <div class="container">
         <h1>FOTOMARATHON VOTING SITE</h1>
         <p>abcdefg</p>
@@ -48,6 +51,16 @@
             <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
     </div>
-    
+
+    <!-- footer  -->
+    <center> 
+        <div class="footer">
+            <div class="footer_title">ĐƠN VỊ TÀI TRỢ</div>
+            <img class="footer_logo" src="images/logocsg.png">
+            <img class="footer_logo" src="images/logocsg.png">
+            <img class="footer_logo" src="images/logocsg.png">
+            <img class="footer_logo" src="images/logocsg.png">
+        </div>
+    </center>
 </body>
 </html>
