--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/logocsg.png">
     <title>Fotomarathon 2</title>
+    <script>
+        function readMore() {
+            var dots = document.getElementById("dots");
+            var moreText = document.getElementById("more");
+            var btnText = document.getElementById("myBtn");
+
+            if (dots.style.display === "none") {
+                dots.style.display = "inline";
+                myBtn.style.display = "none";
+                btnText.innerHTML = ""; 
+                moreText.style.display = "none";
+            } else {
+                dots.style.display = "none";
+                btnText.innerHTML = ""; 
+                moreText.style.display = "inline";
+                myBtn.style.display = "none";
+            }
+        }
+    </script>
 </head>
 <body>
     <!-- navbar -->
@@ -24,30 +43,46 @@
         <p>abcdefg</p>
         <div class="block">
             <img src="images/photo.webp">
-            <div class="title">Title</div>
-            <p>Team</p>
-            <p>Description</p>
+            <div class="title">Tàu anh qua núi</div>
+            <p>Team: núi anh qua tàu</p>
+            <p>Tàu anh qua núi Tàu<span id="dots">...</span> <button onclick="readMore()" id="myBtn">Xem thêm</button>
+                <span id="more"> anh qua núi Tàu anh qua nui Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi.</span></p>
             <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
+
         <div class="block">
             <img src="images/photo.webp">
-            <div class="title">Title</div>
-            <p>Team</p>
-            <p>Description</p>
+            <div class="title">Tàu anh qua núi</div>
+            <p>Team: núi anh qua tàu</p>
+            <p>Tàu anh qua núi Tàu<span id="dots">...</span> <button onclick="readMore()" id="myBtn">Xem thêm</button>
+                <span id="more"> anh qua núi Tàu anh qua nui Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi.</span></p>
             <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
+
         <div class="block">
             <img src="images/photo.webp">
-            <div class="title">Title</div>
-            <p>Team</p>
-            <p>Description</p>
+            <div class="title">Tàu anh qua núi</div>
+            <p>Team: núi anh qua tàu</p>
+            <p>Tàu anh qua núi Tàu<span id="dots">...</span> <button onclick="readMore()" id="myBtn">Xem thêm</button>
+                <span id="more"> anh qua núi Tàu anh qua nui Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi.</span></p>
             <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
+
         <div class="block">
             <img src="images/photo.webp">
-            <div class="title">Title</div>
-            <p>Team</p>
-            <p>Description</p>
+            <div class="title">Tàu anh qua núi</div>
+            <p>Team: núi anh qua tàu</p>
+            <p>Tàu anh qua núi Tàu<span id="dots">...</span> <button onclick="readMore()" id="myBtn">Xem thêm</button>
+                <span id="more"> anh qua núi Tàu anh qua nui Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi.</span></p>
+            <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
+        </div>
+
+        <div class="block">
+            <img src="images/photo.webp">
+            <div class="title">Tàu anh qua núi</div>
+            <p>Team: núi anh qua tàu</p>
+            <p>Tàu anh qua núi Tàu<span id="dots">...</span> <button onclick="readMore()" id="myBtn">Xem thêm</button>
+                <span id="more"> anh qua núi Tàu anh qua nui Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi.</span></p>
             <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
     </div>
