--- a/index.html
+++ b/index.html
@@ -8,23 +8,6 @@
     <link rel="icon" type="image/x-icon" href="images/logocsg.png">
     <title>Fotomarathon 2</title>
     <script>
-        function readMore() {
-            var dots = document.getElementById("dots");
-            var moreText = document.getElementById("more");
-            var btnText = document.getElementById("myBtn");
-
-            if (dots.style.display === "none") {
-                dots.style.display = "inline";
-                myBtn.style.display = "none";
-                btnText.innerHTML = ""; 
-                moreText.style.display = "none";
-            } else {
-                dots.style.display = "none";
-                btnText.innerHTML = ""; 
-                moreText.style.display = "inline";
-                myBtn.style.display = "none";
-            }
-        }
     </script>
 </head>
 <body>
@@ -45,8 +28,7 @@
             <img src="images/photo.webp">
             <div class="title">Tàu anh qua núi</div>
             <p>Team: núi anh qua tàu</p>
-            <p>Tàu anh qua núi Tàu<span id="dots">...</span> <button onclick="readMore()" id="myBtn">Xem thêm</button>
-                <span id="more"> anh qua núi Tàu anh qua nui Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi.</span></p>
+            <p class="description">Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu</p>
             <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
 
@@ -54,8 +36,7 @@
             <img src="images/photo.webp">
             <div class="title">Tàu anh qua núi</div>
             <p>Team: núi anh qua tàu</p>
-            <p>Tàu anh qua núi Tàu<span id="dots">...</span> <button onclick="readMore()" id="myBtn">Xem thêm</button>
-                <span id="more"> anh qua núi Tàu anh qua nui Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi.</span></p>
+            <p class="description">Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu</p>
             <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
 
@@ -63,8 +44,7 @@
             <img src="images/photo.webp">
             <div class="title">Tàu anh qua núi</div>
             <p>Team: núi anh qua tàu</p>
-            <p>Tàu anh qua núi Tàu<span id="dots">...</span> <button onclick="readMore()" id="myBtn">Xem thêm</button>
-                <span id="more"> anh qua núi Tàu anh qua nui Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi.</span></p>
+            <p class="description">Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu</p>
             <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
 
@@ -72,8 +52,7 @@
             <img src="images/photo.webp">
             <div class="title">Tàu anh qua núi</div>
             <p>Team: núi anh qua tàu</p>
-            <p>Tàu anh qua núi Tàu<span id="dots">...</span> <button onclick="readMore()" id="myBtn">Xem thêm</button>
-                <span id="more"> anh qua núi Tàu anh qua nui Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi.</span></p>
+            <p class="description">Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu</p>
             <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
 
@@ -81,8 +60,7 @@
             <img src="images/photo.webp">
             <div class="title">Tàu anh qua núi</div>
             <p>Team: núi anh qua tàu</p>
-            <p>Tàu anh qua núi Tàu<span id="dots">...</span> <button onclick="readMore()" id="myBtn">Xem thêm</button>
-                <span id="more"> anh qua núi Tàu anh qua nui Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi Tàu anh qua núi.</span></p>
+            <p class="description">Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu Tàu anh qua núi Tàu</p>
             <a class="button" type="button" href="https://forms.gle/2wvvjxzPneaYRSTo6" target="_blank"> VOTE</a>
         </div>
     </div>
