--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/logocsg.png">
+    <script src="script.js"></script>
     <title>Fotomarathon 2</title>
     <script>
     </script>
@@ -13,15 +14,15 @@
 <body>
     <!-- navbar -->
     <ul class="navbar">
-        <img class="logocsg" src="images/logocsg.png">
-        <li class="navcontent"><a class="nav_item" href="https://www.facebook.com/cocsaigonfuhcm" target="_blank">Contact</a> </li>
-        <li class="navcontent"><a class="nav_item" href="#">Vote</a> </li>
-        <li class="navcontent"><a class="nav_item" href="" target="_blank">Thể lệ</a> </li>
-        <li class="navcontent"><a class="nav_item" href="https://forms.gle/H2528muDsff1yCPJ9" target="_blank">Tham gia</a> </li>
+        <img class="logocsg fadeIn" src="images/logocsg.png">
+        <li class="navcontent fadeInUp"><a class="nav_item" href="https://www.facebook.com/cocsaigonfuhcm" target="_blank">Contact</a> </li>
+        <li class="navcontent fadeInUp"><a class="nav_item" href="#">Vote</a> </li>
+        <li class="navcontent fadeInUp"><a class="nav_item" href="" target="_blank">Thể lệ</a> </li>
+        <li class="navcontent fadeInUp"><a class="nav_item" href="https://forms.gle/H2528muDsff1yCPJ9" target="_blank">Tham gia</a> </li>
     </ul>
 
     <!-- voting section  -->
-    <div class="container">
+    <div class="container fadein">
         <h1>FOTOMARATHON VOTING SITE</h1>
         <p>abcdefg</p>
         <div class="block">
