--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img class="logocsg fadeIn" src="images/logocsg.png">
         <li class="navcontent fadeInUp"><a class="nav_item" href="https://www.facebook.com/cocsaigonfuhcm" target="_blank">Contact</a> </li>
         <li class="navcontent fadeInUp"><a class="nav_item" href="#">Vote</a> </li>
-        <li class="navcontent fadeInUp"><a class="nav_item" href="" target="_blank">Thể lệ</a> </li>
+        <li class="navcontent fadeInUp"><a class="nav_item" href="" target="_blank">Thông tin</a> </li>
         <li class="navcontent fadeInUp"><a class="nav_item" href="https://forms.gle/H2528muDsff1yCPJ9" target="_blank">Tham gia</a> </li>
     </ul>
 
